Modify desktop sidenav spacing to fix cutoff bug

--- a/css/global.css
+++ b/css/global.css
@@ -111,17 +111,16 @@ header {
   width: 250px;
   padding: 25px;
 }
-.desktop-nav > h3 {
+.desktop-nav h3 {
   font-size: 1.4em;
   color: var(--charcoal);
-  margin: 0 0 25px 0;
 }
 .desktop-nav-content {
   position: fixed;
 }
 .top-links {
   font-weight: 600;
-  margin: 25px 0 10px 0;
+  margin: 20px 0 10px 0;
 }
 .sub-links {
   margin: 0 0 0 15px;
